methods.picture.PictureMono2.scala.error
Erreur de compilation :
PictureMono2:11: error: not found: value levBrosse
  levBrosse()
  ^